--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         />
       </form>
     </div>
+   
+    <div id="crypto-collection"></div>
     <p style="text-align:center">
-      Andy needs your help! <button id="new-toy-btn">Add a new toy!</button>
+      See more Crypto-Currencies <button id="new-toy-btn">Load More!</button>
     </p>
-
-    <div id="toy-collection"></div>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
