load more functionality completed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    
     <div id="crypto-collection"></div>
     <p style="text-align:center">
-      See more Crypto-Currencies <button id="new-toy-btn">Load More!</button>
+      See more Crypto-Currencies <button id="more-crypto-btn">Load More!</button>
     </p>
     <script type="text/javascript" src="index.js"></script>
   </body>
