increased font size of each crypto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
 
     <h1 id="main-header">Top Crypto Currencies!</h1>
-   
+   <div id="search box">
+    <form> </form>
+   </div>
    
     <div id="crypto-collection"></div>
     <p style="text-align:center">
