added search box

--- a/index.html
+++ b/index.html
@@ -8,9 +8,28 @@
   <body>
 
     <h1 id="main-header">Top Crypto Currencies!</h1>
-   <div id="search box">
-    <form> </form>
-   </div>
+   
+    <div id="search-box">
+      <form class="search-box-form">
+        <h3>Search by Ticker!</h3>
+
+        <input
+          type="text"
+          name="image"
+          id="tImage"
+          value=""
+          placeholder="Enter ticker here"
+          class="input-text"
+        />
+        <br />
+        <input
+          type="submit"
+          name="submit"
+          value="Search Crypto"
+          id="crypto-submit"
+        />
+      </form>
+    </div>
    
     <div id="crypto-collection"></div>
     <p style="text-align:center">
