trying to figure SearchCrypto function. look at buildComments layout to grab value. submitted. Use to display matching card or show all Cards with message below that shows no match

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1 id="main-header">Top Crypto Currencies!</h1>
    
     <div id="search-box">
-      <form class="search-box-form">
+      <form class="search-box-form", id="searchCrypto">
         <h3>Search by Ticker!</h3>
 
         <input
           type="text"
           name="image"
-          id="tImage"
+          id="crypto-input"
           value=""
           placeholder="Enter ticker here"
           class="input-text"
