working onn search functionality. can't access symbol inside the object to match

--- a/index.html
+++ b/index.html
@@ -11,20 +11,17 @@
    
     <div id="search-box">
       <form class="search-box-form", id="searchCrypto">
-        <h3>Search by Ticker!</h3>
+        <h3>Search by Crypto Name!</h3>
 
         <input
           type="text"
-          name="image"
-          id="crypto-input"
-          value=""
-          placeholder="Enter ticker here"
+          id="cryptoInput"
+          placeholder="Enter Currency here"
           class="input-text"
         />
         <br />
         <input
           type="submit"
-          name="submit"
           value="Search Crypto"
           id="crypto-submit"
         />
