nearly finished search box functionality based on ticker. As well, finished the Reset button functionality to bring the page back to the first 6 cryptos without having to reload or refresh the page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
     <div id="search-box">
       <form class="search-box-form", id="searchCrypto">
-        <h3>Search by Crypto Name!</h3>
+        <h3>Search by Crypto Ticker!</h3>
 
         <input
           type="text"
@@ -25,7 +25,9 @@
           value="Search Crypto"
           id="crypto-submit"
         />
+        <br />
       </form>
+      <button id="reset-button">Reset</button>
     </div>
    
     <div id="crypto-collection"></div>
