cleaned up the code. made it more organized

--- a/index.html
+++ b/index.html
@@ -13,18 +13,9 @@
       <form class="search-box-form", id="searchCrypto">
         <h3>Search by Crypto Ticker!</h3>
 
-        <input
-          type="text"
-          id="cryptoInput"
-          placeholder="Enter Currency here"
-          class="input-text"
-        />
+        <input type="text" id="cryptoInput" placeholder="Enter Currency here" class="input-text" />
         <br />
-        <input
-          type="submit"
-          value="Search Crypto"
-          id="crypto-submit"
-        />
+        <input type="submit" value="Search Crypto" id="crypto-submit" />
         <br />
       </form>
       <button id="reset-button">Reset</button>
